--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   },
   "homepage": "https://github.com/Ophilus/myFlix-client#readme",
   "dependencies": {
-    "axios": "^0.24.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "axios": "0.24.0",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
+    "react-bootstrap": "2.0.3",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
-    "@parcel/transformer-image": "^2.0.0-rc.0",
-    "@parcel/transformer-sass": "^2.0.0-rc.0"
+    "@parcel/transformer-image": "2.0.0-rc.0",
+    "@parcel/transformer-sass": "2.0.0-rc.0"
   }
 }
