--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "",
-  "default": "src/index.html",
+  "default": "src/index.js",
+  "dependencies": {
+    "axios": "0.24.0",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
+    "react-bootstrap": "2.0.3",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.6",
+    "react-router-dom": "5.3.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-image": "2.0.0-rc.0",
+    "@parcel/transformer-sass": "2.0.0-rc.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,22 +22,11 @@
     "type": "git",
     "url": "git+https://github.com/Ophilus/myFlix-client.git"
   },
-  "author": "",
+  "author": "Ophilus26",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ophilus/myFlix-client/issues"
   },
   "homepage": "https://github.com/Ophilus/myFlix-client#readme",
-  "dependencies": {
-    "axios": "0.24.0",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-bootstrap": "2.0.3",
-    "react-dom": "17.0.2",
-    "react-router-dom": "5.3.0"
-  },
-  "devDependencies": {
-    "@parcel/transformer-image": "2.0.0-rc.0",
-    "@parcel/transformer-sass": "2.0.0-rc.0"
-  }
+  "description": ""
 }
