--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "2.0.3",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "5.3.0",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@parcel/transformer-image": "2.0.0-rc.0",
