--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.html",
   "dependencies": {
     "axios": "0.24.0",
     "parcel": "^2.0.0-rc.0",
@@ -10,8 +10,7 @@
     "react-bootstrap": "2.0.3",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-router-dom": "5.3.0",
-    "redux": "^4.1.2"
+    "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@parcel/transformer-image": "2.0.0-rc.0",
