--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "main": "src/index.html",
+  "default": "src/index.html",
   "dependencies": {
     "axios": "0.24.0",
     "parcel": "^2.0.0-rc.0",
